fix word wrap in codeblocks for ie11

--- a/.source/content/css/btc.css
+++ b/.source/content/css/btc.css
@@ -35,12 +35,12 @@ table#dec2hexData tr:nth-child(2n + 2) td {
     cursor: pointer;
     border: 1px solid #6a6a6a;
     background-color: #2b2b2b;
-    padding: 4px;
+    padding: 1px;
     margin-top: -1px;
     background-color: #101010;
 }
 #dec2hexTable td {
-    padding: 4px;
+    padding: 1px;
 }
 #btnRunHash3 {
     margin-top: 21px;
